@@ -41,6 +41,7 @@ Changes to squid-2.5.STABLE4 (not yet released):
 	  inconsistently.  Now increment the counters in AUFS
 	  functions and for unlinkd.
 	- Improvements to the (experimental) COSS storage scheme.
+	- Bug #736: ICP dynamic timeout algorithm ignores multicast.
 
 Changes to squid-2.5.STABLE3 (25 May 2003):
 
